--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,10 +16,13 @@
             <thead>
                 <tr>
                     <th>Award ID</th>
+                    <th>Recipient Name</th>
+                    <th>Award Amount</th>
+                    <th>Award Date</th>
                     <th>Description</th>
-                    <th>Amount</th>
-                    <th>Recipient</th>
-                    <th>Date</th>
+                    <th>Category</th>
+                    <th>Type</th>
+                    <th>Agency</th>
                 </tr>
             </thead>
             <tbody id="awardsTableBody">
