feat(wip): deep research table

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
         <button id="fetchButton">Fetch Awards</button>
         <div id="status" style="display: none;"></div>
         <div id="loading" class="loading">Loading awards...</div>
+        
+        <h2>Awards</h2>
         <table id="awardsTable">
             <thead>
                 <tr>
@@ -26,6 +28,22 @@
                 </tr>
             </thead>
             <tbody id="awardsTableBody">
+            </tbody>
+        </table>
+
+        <h2>Research Results</h2>
+        <table id="researchTable">
+            <thead>
+                <tr>
+                    <th>Award ID</th>
+                    <th>Research Status</th>
+                    <th>Research Date</th>
+                    <th>Findings</th>
+                    <th>Risk Score</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="researchTableBody">
             </tbody>
         </table>
     </div>
