feat: research button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
                     <th>Category</th>
                     <th>Type</th>
                     <th>Agency</th>
+                    <th>Start Research</th>
                 </tr>
             </thead>
             <tbody id="awardsTableBody">
