--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,26 +25,11 @@
                     <th>Category</th>
                     <th>Type</th>
                     <th>Agency</th>
-                    <th>Start Research</th>
-                </tr>
-            </thead>
-            <tbody id="awardsTableBody">
-            </tbody>
-        </table>
-
-        <h2>Research Results</h2>
-        <table id="researchTable">
-            <thead>
-                <tr>
-                    <th>Award ID</th>
-                    <th>Research Status</th>
-                    <th>Research Date</th>
-                    <th>Findings</th>
-                    <th>Risk Score</th>
+                    <th>Research</th>
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="researchTableBody">
+            <tbody id="awardsTableBody">
             </tbody>
         </table>
     </div>
