--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,8 @@
 <body>
     <h1>Federal Awards Dashboard</h1>
     <div class="container">
-        <button id="fetchButton">Fetch Awards</button>
         <div id="status" style="display: none;"></div>
-        <div id="loading" class="loading">Loading awards...</div>
-        
+        <div id="loading" style="display: none;">Loading...</div>
         <h2>Awards</h2>
         <table id="awardsTable">
             <thead>
