feat: risk level

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
                     <th>Category</th>
                     <th>Type</th>
                     <th>Agency</th>
+                    <th>Risk Level</th>
                     <th>Research</th>
                     <th>Actions</th>
                 </tr>
